feat: add RabbitMQ, Spring Cloud, and Spring Load Balancer configuration
refactor: code refactoring