@@ -1,9 +1,13 @@
 package com.java.fiap.ordermanager.domain.service.impl;
 
+import com.java.fiap.ordermanager.config.mq.OrderEvent;
+import com.java.fiap.ordermanager.config.mq.OrderProducer;
 import com.java.fiap.ordermanager.domain.dto.OrderDTO;
+import com.java.fiap.ordermanager.domain.dto.OrderItemDTO;
+import com.java.fiap.ordermanager.domain.dto.PaymentDTO;
 import com.java.fiap.ordermanager.domain.dto.form.OrderForm;
 import com.java.fiap.ordermanager.domain.dto.form.OrderTrackingForm;
-import com.java.fiap.ordermanager.domain.entity.Order;
+import com.java.fiap.ordermanager.domain.entity.Orders;
 import com.java.fiap.ordermanager.domain.entity.OrderItem;
 import com.java.fiap.ordermanager.domain.entity.OrderTracking;
 import com.java.fiap.ordermanager.domain.entity.Payment;
@@ -15,7 +19,6 @@ import com.java.fiap.ordermanager.domain.repository.OrderRepository;
 import com.java.fiap.ordermanager.domain.service.OrderService;
 import com.java.fiap.ordermanager.domain.service.OrderTrackingService;
 import com.java.fiap.ordermanager.domain.service.usecases.create.CreateOrderUseCase;
-import java.time.LocalDateTime;
 import java.util.List;
 import java.util.UUID;
 import java.util.stream.Collectors;
@@ -32,11 +35,11 @@ public class OrderServiceImpl implements OrderService {
   private final CreateOrderUseCase createOrderUseCase;
   private final ConverterToOrFromDTO converterToOrFromDTO;
 
+  private final OrderProducer orderProducer;
+
   @Override
   public List<OrderDTO> getAllOrders() {
-    return orderRepository.findAll().stream()
-        .map(converterToOrFromDTO::convertToDTO)
-        .collect(Collectors.toList());
+    return orderRepository.findAll().stream().map(converterToOrFromDTO::convertToDTO).toList();
   }
 
   @Override
@@ -47,7 +50,7 @@ public class OrderServiceImpl implements OrderService {
   @Override
   @Transactional
   public OrderDTO createOrder(OrderForm orderForm) {
-    Order newOrder = createOrderUseCase.execute(converterToOrFromDTO.convertToEntity(orderForm));
+    Orders newOrder = createOrderUseCase.execute(converterToOrFromDTO.convertToEntity(orderForm));
 
     List<OrderItem> items =
         orderForm.items().stream()
@@ -58,7 +61,8 @@ public class OrderServiceImpl implements OrderService {
                         .productId(itemForm.productId())
                         .quantity(itemForm.quantity())
                         .build())
-            .toList();
+            .collect(Collectors.toList());
+
     newOrder.setItems(items);
 
     Payment payment =
@@ -67,6 +71,7 @@ public class OrderServiceImpl implements OrderService {
             .amount(orderForm.payment().amount())
             .status(PaymentStatus.PENDING)
             .build();
+
     newOrder.setPayment(payment);
 
     List<OrderTracking> trackingList =
@@ -77,20 +82,33 @@ public class OrderServiceImpl implements OrderService {
                         .order(newOrder)
                         .latitude(trackingForm.latitude())
                         .longitude(trackingForm.longitude())
-                        .timestamp(LocalDateTime.now())
                         .build())
-            .toList();
+            .collect(Collectors.toList());
 
     newOrder.setTracking(trackingList);
 
-    return converterToOrFromDTO.convertToDTO(orderRepository.save(newOrder));
+    Orders orderSaved = orderRepository.save(newOrder);
+
+    List<OrderItemDTO> orderItemDTOS =
+        orderSaved.getItems().stream()
+            .map(converterToOrFromDTO::convertToDTO)
+            .collect(Collectors.toList());
+
+    PaymentDTO paymentDTO = converterToOrFromDTO.convertToDTO(payment);
+
+    OrderEvent orderEvent =
+        new OrderEvent(orderSaved.getId(), orderSaved.getCreatedAt(), orderItemDTOS, paymentDTO);
+
+    orderProducer.sendOrderCreatedEvent(orderEvent);
+
+    return converterToOrFromDTO.convertToDTO(orderSaved);
   }
 
   @Override
   @Transactional
   public OrderDTO updateOrderStatus(
       UUID id, OrderStatus newStatus, OrderTrackingForm trackingForm) {
-    Order order = getOneOrderById(id);
+    Orders order = getOneOrderById(id);
 
     if (order.getStatus() == OrderStatus.DELIVERED || order.getStatus() == OrderStatus.CANCELED) {
       throw new ServicesOrderException("Cannot change status of a DELIVERED or CANCELED order.");
@@ -100,7 +118,7 @@ public class OrderServiceImpl implements OrderService {
     orderRepository.save(order);
 
     if (newStatus == OrderStatus.SHIPPED) {
-      OrderTracking tracking = orderTracking.addTracking(order.getId(), trackingForm);
+      OrderTracking tracking = orderTracking.addTracking(order, trackingForm);
       order.getTracking().add(tracking);
 
       orderRepository.save(order);
@@ -112,7 +130,7 @@ public class OrderServiceImpl implements OrderService {
   @Override
   @Transactional
   public OrderDTO deleteOrder(UUID id) {
-    Order order = getOneOrderById(id);
+    Orders order = getOneOrderById(id);
 
     if (order.getStatus() == OrderStatus.DELIVERED || order.getStatus() == OrderStatus.CANCELED) {
       throw new ServicesOrderException("Cannot change status of a DELIVERED or CANCELED order.");
@@ -123,7 +141,7 @@ public class OrderServiceImpl implements OrderService {
     return converterToOrFromDTO.convertToDTO(order);
   }
 
-  public Order getOneOrderById(UUID id) {
+  public Orders getOneOrderById(UUID id) {
     return orderRepository
         .findById(id)
         .orElseThrow(() -> new ServicesOrderException("Not Found Order"));
